--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Portfolio using eleventy",
   "main": "index.js",
   "scripts": {
+    "build": "eleventy",
+    "start": "eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Samir70",
